[tool.poetry]
name = "pybl3p"
version = "0.3"
description = "A python wrapper for the bl3p cryptocurrency exchange"
license = "MIT"
authors = ["Gijs Molenaar <gijs@pythonic.nl>"]
readme = "README.md"
repository = "https://github.com/gijzelaerr/pybl3p"
include = ["pybl3p/py.typed"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "*"
websockets = "*"
notebook = "*"
pandas = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
